JAVA-18149 Pass to the build the required parameters for chronicle-map